<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextStyleIntro"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/intro"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/intro_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/a380" />

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q1" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q1_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a1" />

            <RadioButton
                android:id="@+id/q1_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q2" />

        <EditText
            android:id="@+id/name_field_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:layout_marginLeft="@dimen/activity_left_margin"
            android:layout_marginRight="@dimen/activity_right_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:hint="@string/hint"
            android:inputType="text" />

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q3" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q3_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a1" />

            <RadioButton
                android:id="@+id/q3_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q4" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q4_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a1" />

            <RadioButton
                android:id="@+id/q4_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q5" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q5_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_a1" />

            <RadioButton
                android:id="@+id/q5_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q6" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q6_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_a1" />

            <RadioButton
                android:id="@+id/q6_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q7" />

        <CheckBox
            android:id="@+id/q7_a1"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q7_a1" />

        <CheckBox
            android:id="@+id/q7_a2"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q7_a2" />

        <CheckBox
            android:id="@+id/q7_a3"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q7_a3" />

        <CheckBox
            android:id="@+id/q7_a4"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q7_a4" />

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q8" />

        <CheckBox
            android:id="@+id/q8_a1"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q8_a1" />

        <CheckBox
            android:id="@+id/q8_a2"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q8_a2" />

        <CheckBox
            android:id="@+id/q8_a3"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q8_a3" />

        <CheckBox
            android:id="@+id/q8_a4"
            style="@style/TextStyleAnswersCheck"
            android:text="@string/q8_a4" />

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q9" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q9_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q9_a1" />

            <RadioButton
                android:id="@+id/q9_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q9_a2" />
        </RadioGroup>

        <TextView
            style="@style/TextStyleQuestions"
            android:text="@string/Q10" />

        <RadioGroup style="@style/TextStyleAnswersRadio">

            <RadioButton
                android:id="@+id/q10_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q10_a1" />

            <RadioButton
                android:id="@+id/q10_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q10_a2" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submit"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/score"
            style="@style/TextStyleQuestions" />

    </LinearLayout>
</ScrollView>